# hoerklavierschule

./: README.md
android/: build.gradle  local.properties
android/app/: CMakeLists.txt  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: SyncPlay.cpp  SyncPlay.h
android/app/src/main/java/com/superpowered/hoerklavierschule/: Audio.java  AudioItemFragment.java  AudioPlayFragment.java  MainActivity.java  Marker.java  Piece.java  WaveFormView.java
android/app/src/main/java/com/superpowered/hoerklavierschule/adapter/: MyAudioItemRecyclerViewAdapter.java
android/app/src/main/java/com/superpowered/hoerklavierschule/sql/: AppDatabase.java  Audio.java  Piece.java  PieceDao.java  SQLEngine.java  SQLTest.java  Settings.java
android/app/src/main/res/drawable/: audio_play.xml
android/app/src/main/res/layout/: activity_main.xml  fragment_audio_play.xml  fragment_audioitem.xml  fragment_audioitem_list.xml
android/app/src/main/res/menu/: nav_main.xml
android/app/src/main/res/raw/: links.m4a
android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
android/gradle/wrapper/: gradle-wrapper.properties
android_old/app/: CMakeLists.txt  build.gradle
android_old/app/src/main/: AndroidManifest.xml
android_old/app/src/main/cpp/: SyncPlay.cpp  SyncPlay.h
android_old/app/src/main/res/layout/: activity_main.xml
hoerklavierschule/app/: build.gradle
hoerklavierschule/app/src/main/: AndroidManifest.xml
hoerklavierschule/app/src/main/cpp/: SyncPlay.cpp
hoerklavierschule/app/src/main/res/layout/: activity_main.xml
(+8 files in other folders)
